--- a/css/design.css
+++ b/css/design.css
@@ -4,6 +4,27 @@ body{
   color: #222;
 }
 
+/* Pagination links */
+.pagination button {
+  color: black;
+  float: left;
+  padding: 8px 16px;
+  text-decoration: none;
+  transition: background-color .3s;
+  align-items: center;
+}
+
+/* Style the active/current link */
+.pagination button.active {
+  background-color: dodgerblue;
+  color: white;
+}
+
+/* Add a grey background color on mouse-over */
+.pagination button:hover:not(.active) {background-color: #FFFF00;}
+
+
+
 .page{
   margin: 50px auto;
   width: 70%;
@@ -44,6 +65,7 @@ body{
     }
 
 .student-list{}
+
 
   .student-item{
     margin: 0 0 20px 0;
@@ -99,7 +121,7 @@ body{
   margin: 40px 0 0 0;
   text-align: center;
 }
- 
+
   .pagination li{
     display: inline;
   }
