--- a/css/design.css
+++ b/css/design.css
@@ -5,28 +5,37 @@ body{
 }
 
 /* Pagination links */
-.pagination button {
-  color: black;
+button {
+  color: white;
   float: left;
   padding: 8px 16px;
   text-decoration: none;
+  text-align: center;
   transition: background-color .3s;
   align-items: center;
+  border: none;
+  border-radius: 4px;
 }
 
 /* Style the active/current link */
-.pagination button.active {
-  background-color: dodgerblue;
+.active {
+  background-color: black;
   color: white;
 }
 
-/* Add a grey background color on mouse-over */
-.pagination button:hover:not(.active) {background-color: #FFFF00;}
+/* Add a background color on mouse-over */
+button:hover:not(.active) {background-color: #00ff99;}
 
+#buttonGroup {
+  display: flex;
+  justify-content: center;
+  padding-top: 0px;
+  padding-bottom: 40px;
+}
 
 
 .page{
-  margin: 50px auto;
+  margin: 30px auto;
   width: 70%;
   background-color: #fff;
   border-radius: 5px;
